5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1712_2506.log
== TEST (2019-05-14 09:48:27) 
-- CODE:
qi = int(input("Qtd. inicial: "))
pc = float(input("Percentual de crescimento: "))
qv = int(input("Qtd. para venda: "))
t = 0 #contadora
soma = 0 #acumuladora
while (qi == 0 and qi < 12.000):
	c = 
-- ERROR:
File "XXXX", line 7
    c = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:35:59) 
-- CODE:
qi = int(input("Qtd. inicial: "))
pc = float(input("Percentual de crescimento: "))
qv = int(input("Qtd. para venda: "))
t = 0 #contadora
while (qi > 0 and qi < 12000):
	c = qi * pc / 100
	qi = qi + c
	t = t + 1
if (qi >= 12000):
	msg = "LIMITE"
elif (qi <= 0):
	mgs = "EXTINCAO"
print(msg)
	
-- OUTPUT:
LIMITE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:36:02) 
-- CODE:
qi = int(input("Qtd. inicial: "))
pc = float(input("Percentual de crescimento: "))
qv = int(input("Qtd. para venda: "))
t = 0 #contadora
while (qi > 0 and qi < 12000):
	c = qi * pc / 100
	qi = qi + c
	t = t + 1
if (qi >= 12000):
	msg = "LIMITE"
elif (qi <= 0):
	mgs = "EXTINCAO"
print(msg)
	
-- EXECUTION TIME:
0.186589
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:36:59) 
-- CODE:
qi = int(input("Qtd. inicial: "))
pc = float(input("Percentual de crescimento: "))
qv = int(input("Qtd. para venda: "))
t = 0 #contadora
while (qi > 0 and qi < 12000):
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 12000):
	print("LIMITE")
elif (qi <= 0):
	print("EXTINCAO")
print(t)
	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:37:01) 
-- CODE:
qi = int(input("Qtd. inicial: "))
pc = float(input("Percentual de crescimento: "))
qv = int(input("Qtd. para venda: "))
t = 0 #contadora
while (qi > 0 and qi < 12000):
	c = qi * pc / 100
	qi = qi + c - qv
	t = t + 1
if (qi >= 12000):
	print("LIMITE")
elif (qi <= 0):
	print("EXTINCAO")
print(t)
	
-- EXECUTION TIME:
0.138758
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
